# numa-llm-embedding

./: .gitignore
download/: Dockerfile  pyproject.toml
download/app/: main.py
download/tests/: test_main.py
embedding/: pyproject.toml
embedding/app/: main.py
embedding/tests/: test_main.py
