[tool.poetry]
name = "numa-llm-download"
version = "0.0.1"
description = "Download file"
authors = ["alexanghh"]

[tool.poetry.dependencies]
python = "~3.10"
pynumaflow = "0.4.1"
requests = "2.31.0"
tika = "1.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
